updated UI edit

--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 	<title>TODO App</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+	<link rel="stylesheet" type="text/css" href="../css/index.css">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-	<div id="app"></div>
+	<div class="row">
+		<div id="app" class=" col s8 offset-s2 card"></div>
+	</div>
 	<script src="index.js"></script>
 </body>
 </html>
